# green-book-nlmk

./: .env.example  .gitignore  README.md  docker-compose.perf.yml  docker-compose.rehearsal.yml  docker-compose.staging.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py  observability.py
backend/app/middleware/: rate_limit.py  request_logging.py
backend/app/models/: __init__.py  species.py  (+8 more)
backend/migrations/: env.py
backend/scripts/: media_worker.py
backend/tests/: conftest.py  test_admin_catalog_import.py  test_admin_guardrails.py  test_admin_ops_alerts.py  test_admin_ops_summary.py  test_admin_zones_import.py  test_audit_api.py  test_audit_logging.py  test_auth.py  test_cache_service.py  test_config_security.py  test_dashboard_summary.py  test_export_behavior.py  test_fact_of_day_service.py  test_frontend_bundle_budget_script.py  test_frontend_source_guards.py  test_gamification_endpoints.py  test_gamification_service.py  test_gamification_stats.py  test_health.py  test_map_behavior.py  test_map_validation.py  test_media_access.py  test_media_pipeline.py  test_media_processing.py  test_media_validation.py  test_metrics.py  test_notifications.py  test_notifications_edge_cases.py  test_observations_access.py  test_observations_workflow.py  test_perf_smoke_ci_script.py  test_query_validation.py  test_rate_limit_middleware.py  test_species.py  test_species_content_review.py  test_species_enrichment.py  test_validation_flow.py  test_validation_permissions.py
(+151 files in other folders)
